Corrigindo definição da href de 'pedidos' para 'orders'

--- a/app/templates/html/base.html
+++ b/app/templates/html/base.html
@@ -9,7 +9,7 @@
         <h2>Meu Restaurante</h2>
         <h3>Acesse o menu:</h3>
         <ul>
-            <li><a href="pedidos">Listar Pedidos</a></li>
+            <li><a href="orders">Listar Pedidos</a></li>
             <li><a href="#">Listar Clientes</a></li>
             <li><a href="#">Listar Funcionários</a></li>
         </ul>
