--- a/app/templates/html/base.html
+++ b/app/templates/html/base.html
@@ -1,20 +1,18 @@
-<!--base.html -->
 <html>
-    <head>
-        <title>
-            Meu Restaurante
-        </title>
-    </head>
-    <body>
-        <h2>Meu Restaurante</h2>
-        <h3>Acesse o menu:</h3>
-        <ul>
-            <li><a href="orders">Listar Pedidos</a></li>
-            <li><a href="#">Listar Clientes</a></li>
-            <li><a href="#">Listar Funcionários</a></li>
-        </ul>
-        <div id="content">
-            {% block content %} {% endblock %}
-        </div>
-    </body>
+	<head>
+		<title>Meu Restaurante</title>
+	</head>
+	<body>
+		<h2>Meu Restaurante</h2>
+		<h3>Acesse o menu:</h3>
+		<ul>
+			<li><a href="orders">Listar Pedidos</a></li>
+			<li><a href="#">Listar Clientes</a></li>
+			<li><a href="#">Listar Funcionários</a></li>
+			<li><a href="registered_orders">Registrar Pedidos</a></li>
+		</ul>
+		<div id="login">
+		{% block login %} {% endblock %}
+		</div>
+	</body>
 </html>
