Alterando variável de bloco de 'content' para 'login'

--- a/app/templates/html/home.html
+++ b/app/templates/html/home.html
@@ -1,6 +1,6 @@
 <!-- home.html -->
 {% extends "base.html" %}
-{% block content %}
+{% block login %}
     <p>Lembre-se de verificar corretamente os pedidos!</p>
     <p>Caso algum produto esteja inconsistente. Solicitar a alteração!</p>
     <p>Não realizamos a troca dos pedidos após a confecção!</p>
