--- a/app/templates/html/orders.html
+++ b/app/templates/html/orders.html
@@ -1,11 +1,14 @@
-<!-- orders.html -->
 {% extends "base.html" %}
-{% block content %}
-        <h1>Pedidos</h1>
+{% block login %}
+    <h1>Pedidos</h1>
         <ul>
+            {% if orders|length > 0 %}
             {% for order in orders %}
-            <li>{{ order }}</li>
+            <li>{{ orders[order] }}</li>
             {% endfor %}
+            {% else %}
+            <li>Ainda não existem pedidos registrados!</li>
+            {% endif %}
         </ul>
-        <p>Voltar para <a href="/">página inicial</a>!</p>
+    <p>Voltar para <a href="/">página inicial</a>!</p>
 {% endblock %}
