Corrigindo front-end de home.html

--- a/individual/views/home.html
+++ b/individual/views/home.html
@@ -1,11 +1,9 @@
-<!-- home.html -->
-{% extends "base.html" %}
-{% block content %}
-<div id="content">
+{% block home %}
+<div class="d-flex align-items-center justify-content-center" id="home">
     <div class="vertical-center">
-        <div class="container">
-            <p>Lembre-se de verificar corretamente os pedidos!</p>
-            <p>Caso algum produto esteja inconsistente. Solicitar a alteração!</p>
+        <div class=" container">
+            <p>Lembre-se de verificar corretamente os produtos e ingredientes!</p>
+            <p>Caso algum produto ou ingrediente esteja inconsistente: <strong>Solicitar a alteração!</strong></p>
             <p>Não realizamos a troca dos pedidos após a confeccão!</p> 
         </div>
     </div>
