--- a/individual/views/base.html
+++ b/individual/views/base.html
@@ -1,66 +1,13 @@
 <!-- base.html -->
 <html>
 <head>
-    <!-- {% block title %} {% endblock %} -->
-    <title>MyProducts</title>
-    <!-- {% block link %} {% endblock %} -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    {% include "content/index_title.html" %}
+    {% include "content/link.html" %}
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <!-- {% block logo %} {% endblock %} -->
-        <a class="navbar-brand" href="#">
-            <img src="static/img/170781.png" width="30" height="30" alt="">
-        </a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <div class="navbar-nav d-flex">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-item nav-link" href="/base">Base</a>
-                    </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="/product">Produtos</a>
-                    </li>    
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                </ul>
-                <!-- <ul class="navbar-nav ml-auto">
-                    
-                </ul> -->
-            </div>
-            <!-- <div class="collapse navbar-collapse">
-                <a class="nav-item nav-link ml-auto p-2" href="/auth">Login</a>
-            </div> -->
-        </div>
-    </nav>
-    {% block content %} {% endblock %}
+    {% include "content/basic/header.html" %}
+    {% include "home.html" %}
 </body>
-<!-- {% block base %} {% endblock %} -->
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    {% include "content/scripts.html" %}
+    {% include "content/basic/scripts_base.html" %}
 </html>
