--- a/individual/views/base/base_index.html
+++ b/individual/views/base/base_index.html
@@ -49,7 +49,7 @@
 
         </div>
     </nav>
-    {% block content %} {% endblock %}
+    {% include "home.html" %}
 </body>
 <!-- {% block base %}{% endblock %} -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
