Corrigindo block de 'content' para 'home' em view_example.html

--- a/individual/views/base/view_example.html
+++ b/individual/views/base/view_example.html
@@ -1,6 +1,5 @@
 <!-- home.html -->
-{% extends "base.html" %}
-{% block content %}
+{% block home %}
 <div class="vertical-center">
     <div class="container forms shadow-sm p-3 mb-5 bg-white border border-secondary rounded">
         <form class="row g-3 justify-content-center">
