Adicionando página inicial explicando nosso projeto

--- a/grupo/views/home.html
+++ b/grupo/views/home.html
@@ -2,9 +2,18 @@
 <div class="d-flex align-items-center justify-content-center" id="home">
     <div class="vertical-center">
         <div class=" container">
-            <p>Lembre-se de verificar corretamente os produtos e ingredientes!</p>
-            <p>Caso algum produto ou ingrediente esteja inconsistente: <strong>Solicitar a alteração!</strong></p>
-            <p>Não realizamos a troca dos pedidos após a confeccão!</p> 
+            <p>
+                Nosso projeto se baseia em sensor de umidade do ar e sensor de gases nocivos, 
+                que em conjunto trabalham na segurança domiciliar. Com o nosso projeto, 
+                buscamos oferecer maior segurança contra incêndios nas residências, uma 
+                vez que esses desastres podem ser devastadores e causar prejuízos incalculáveis. 
+                Para alcançar este objetivo, iremos disponibilizar dispositivos que irão monitorar 
+                constantemente a umidade do ar e detectar a presença de gases nocivos. 
+                Esses dispositivos terão capacidade de detectar mudanças sutis no ambiente, 
+                garantindo uma resposta rápida em caso de risco de incêndio. Nosso projeto tem como 
+                objetivo proporcionar segurança e tranquilidade para as famílias, garantindo que suas 
+                residências estejam protegidas contra incêndios.
+            </p>
         </div>
     </div>
 </div>
