--- a/grupo/views/content/link.html
+++ b/grupo/views/content/link.html
@@ -1,4 +1,5 @@
 {% block link %}
+<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/alert.ico') }}" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="static/css/style.css" />
