--- a/grupo/views/content/basic/header.html
+++ b/grupo/views/content/basic/header.html
@@ -10,8 +10,14 @@
                     <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/product">Produtos</a>
+                    <a class="nav-link" href="/IoT">IoT</a>
                 </li>    
+                <li class="nav-item">
+                    <a class="btn btn-outline-info" style="margin-left: 10px; margin-right: 10px;" href="/user/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-info" href="/user/register">Registro</a>
+                </li>  
             </ul>
         </div>
     </div>
