--- a/grupo/views/iot/list.html
+++ b/grupo/views/iot/list.html
@@ -17,8 +17,6 @@
         </ul>
         {% endfor %}
     </ul>
-</div>
-<div>
     <nav aria-label="Lista de dados">
         <ul class="pagination pagination-sm">
             <li class="page-item active" aria-current="page">
@@ -26,6 +24,8 @@
             </li>
             <li class="page-item"><a class="page-link" href="#">2</a></li>
             <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">4</a></li>
+            <li class="page-item"><a class="page-link" href="#">5</a></li>
         </ul>
     </nav>
 </div>
