Adicionando arquivos de template

--- a/grupo/views/user/index.html
+++ b/grupo/views/user/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        {% include "content/basic/header.html" %}
+        {% include "content/header.html" %}
         <div class="mb-5 d-flex align-items-center justify-content-center">
             <h1>Tela de Produtos</h1>
         </div>
