--- a/grupo/views/user/ingredient.html
+++ b/grupo/views/user/ingredient.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        {% include "product/basic/title_ingredient.html" %}
+        {% include "product/title_ingredient.html" %}
         {% include "content/link.html" %}
     </head>
 
     <body>
-        {% include "content/basic/header.html" %}
+        {% include "content/header.html" %}
         <div class="mb-5 d-flex align-items-center justify-content-center">
             <h2>Cadastrar Ingredientes</h2>
         </div>
@@ -24,4 +24,5 @@
         </div>
         {% include "product/save_ingredient.html" %}
     </body>
+    {% include "content/scripts.html" %}
 </html>
