--- a/grupo/views/user/login.html
+++ b/grupo/views/user/login.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        {% include "user/basic/user_login.html" %}
+        {% include "user/user_login.html" %}
         {% include "content/link.html" %}
     </head>
     <body>
-        {% include "content/basic/header.html" %}
+        {% include "content/header.html" %}
         <div class="mb-3 d-flex align-items-center justify-content-center">
             <img src="static/img/170781.png" width="80" height="80" alt="">
         </div>
@@ -27,4 +27,5 @@
             </div>
         </div>
     </body>
+    {% include "content/scripts.html" %}
 </html
