--- a/grupo/views/base.html
+++ b/grupo/views/base.html
@@ -1,13 +1,13 @@
 <!-- base.html -->
 <html>
 <head>
-    {% include "index/title.html" %}
+    {% include "content/title.html" %}
     {% include "content/link.html" %}
 </head>
 <body>
-    {% include "content/basic/header.html" %}
+    {% include "content/header.html" %}
+    
     {% include "home.html" %}
 </body>
-    {% include "index/scripts.html" %}
-    {% include "content/basic/scripts_base.html" %}
+    {% include "content/scripts.html" %}
 </html>
