Criando arquivos de template e incluindos no arquivo principal

--- a/grupo/views/error/404/404.html
+++ b/grupo/views/error/404/404.html
@@ -1,2 +1,11 @@
-
-{% include "error/404/template.html" %}
+<html>
+<head>
+    <title>Página não encontrada - 404</title>
+    {% include "content/link.html" %}
+</head>
+<body>
+    {% include "content/header.html" %}
+    {% include "error/404/template.html" %}
+</body>
+    {% include "content/scripts.html" %}
+</html>
