Adicionando margin-top para o template

--- a/grupo/views/home.html
+++ b/grupo/views/home.html
@@ -1,5 +1,5 @@
 {% block home %}
-<div class="d-flex align-items-center justify-content-center" id="home">
+<div class="d-flex align-items-center justify-content-center" style="margin-top: -120px;" id="home">
     <div class="vertical-center">
         <div class=" container">
             <p>
