Criando arquivos de template para sensores e placas e incluindos no arquivo principal

--- a/grupo/views/iot/index.html
+++ b/grupo/views/iot/index.html
@@ -3,11 +3,9 @@
         {% include "iot/title.html" %}
         {% include "content/link.html" %}
     </head>
-
     <body>
-        {% include "content/basic/header.html" %} 
-    
-        {% include "iot/list.html" %}
+        {% include "content/header.html" %} 
+        {% include "iot/iot.html" %}
     </body>
     {% include "content/scripts.html" %}
 </html>
