Renomeando includes e adicionando includes de template

--- a/grupo/views/user/register.html
+++ b/grupo/views/user/register.html
@@ -1,13 +1,11 @@
 <html>
     <head>
-        {% include "user/user_register.html" %}
+        {% include "user/title_register.html" %}
         {% include "content/link.html" %}
     </head>
     <body>
         {% include "content/header.html" %}
-        <div class="mb-3 d-flex align-items-center justify-content-center">
-            <img src="static/img/170781.png" width="80" height="80" alt="">
-        </div>
+        {% include "content/img_logo.html" %}
         <div class="mb-4 d-flex align-items-center justify-content-center">
             <h2>Acesse sua conta</h2>
         </div> 
