--- a/grupo/views/content/logo.html
+++ b/grupo/views/content/logo.html
@@ -1,5 +1,5 @@
 <!-- logo -->
-{% block logo %}
+{% block logo_30 %}
 <a class="navbar-brand" href="#">
     <img src="static/img/170781.png" width="30" height="30" alt="">
 </a>
