--- a/grupo/views/content/header.html
+++ b/grupo/views/content/header.html
@@ -15,7 +15,7 @@
                     </li>
                 {% elif user['is_logged'] and user['is_admin'] %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/Users">Usuários</a>
+                        <a class="nav-link" href="/admin/Users">Usuários</a>
                     </li>
                 {% endif %}
             </ul>
