--- a/grupo/views/admin/Users/list_creator.html
+++ b/grupo/views/admin/Users/list_creator.html
@@ -1,3 +1,129 @@
 {% block list_creator %}
-
+{% include "content/back_link.html" %}
+<div class="mb-5 d-flex align-items-center justify-content-center">
+    <h1>Lista de Usuários</h1>
+</div>
+<div class="col-md-12">
+    {% if db_users %}
+    <div class="user-dashboard-info-box table-responsive mb-0 bg-white p-4 shadow-sm">
+        <table class="table manage-candidates-top mb-0">
+            <thead>
+                <tr>
+                    <th>
+                        Usuário
+                    </th>
+                    <th class="text-center">
+                        Cargo
+                    </th>
+                    <th class="action text-right">
+                        Detalhes
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user in db_users %}
+                <tr class="candidates-list">
+                    <td>
+                        <div class="thumb">
+                            <img src="" alt="">
+                        </div>
+                        <div class="candidate-list-details">
+                            <div class="candidate-list-info">
+                                <div class="candidate-list-title">
+                                    <h5 class="mb-0">
+                                        <a href="#">{{ user['username'] }}</a>
+                                    </h5>
+                                </div>
+                                <!-- <div class="candidate-list-option">
+                                    <ul class="list-unstyled">
+                                        <li>
+                                            <i class="fas fa-filter pr-1"></i>
+                                            Information Technology
+                                        </li>
+                                        <li>
+                                            <i class="fas fa-map-marker-alt pr-1"></i>
+                                            Rolling Meadows, IL 60008
+                                        </li>
+                                    </ul>
+                                </div> -->
+                            </div>
+                        </div>
+                    </td>
+                    <td class="candidate-list-favourite-time text-center"> 
+                        {% if user["is_admin"] %}
+                        <a class="candidate-list-favourite order-2 text-danger" href="#">
+                            <i class="fas fa-user-crown"></i>
+                        </a> 
+                        <span class="candidate-list-time order-1">Admin</span>
+                        {% else %}
+                        <a class="candidate-list-favourite order-2 text-danger" href="#">
+                            <i class="fas fa-user"></i>
+                        </a> 
+                        <span class="candidate-list-time order-1">Normal</span>
+                        {% endif %}
+                    </td>
+                    <td>
+                        <ul class="list-unstyled mb-0 d-flex justify-content-end">
+                            <li>
+                                <a href="#" class="text-primary" data-toggle="tooltip" title="" data-original-title="view">
+                                    <i class="far fa-eye"></i>
+                                    Visualizar
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit">
+                                    <i class="fas fa-pencil-alt"></i>
+                                    Editar
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-danger" data-toggle="tooltip" title="" data-original-title="Delete">
+                                    <i class="far fa-trash-alt"></i>
+                                    Deletar
+                                </a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <div class="text-center mt-3 mt-sm-3">
+            <ul class="pagination justify-content-center mb-0">
+                <li class="page-item disabled"> 
+                    <span class="page-link">Prev</span>
+                </li>
+                <li class="page-item active" aria-current="page">
+                    <span class="page-link">1 </span> 
+                    <span class="sr-only">(current)</span>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#">2</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#">3</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#">...</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#">25</a>
+                </li>
+                <li class="page-item"> 
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    {% else %}
+    <div class="shadow-md align-items-center justify-content-center" style="margin-left: 35%; margin-right: 35%; border: 1px solid grey; border-radius: 20px;">
+        <div class="mb-3 d-flex align-items-center justify-content-center">
+            <h2>Que pena! :(</h2>
+        </div>
+        <div class="d-flex align-items-center justify-content-center">
+            <h3>Sem usuários criados!</h3>
+        </div>
+    </div>
+    {% endif %}
+</div>
 {% endblock %}
