Corrigindo rota para /UsersList

--- a/grupo/views/admin/Users/users.html
+++ b/grupo/views/admin/Users/users.html
@@ -18,7 +18,7 @@
             </a>
         </li>
         <li class="d-flex align-items-center justify-content-center">
-            <a class="btn btn-outline-secondary" href="Users/list_of_boards">
+            <a class="btn btn-outline-secondary" href="Users/UsersList">
                 <i class="fa fa-list" style="margin-right: 2px;"></i>
                 Visualizar Usuários
             </a>
