Adicionando link para o CSS

--- a/grupo/views/admin/Users/list_of_users.html
+++ b/grupo/views/admin/Users/list_of_users.html
@@ -8,4 +8,5 @@
         {% include "admin/Users/list_creator.html" %}
     </body>
     {% include "content/scripts.html" %}
+    <link rel="stylesheet" href="static/css/list_creator.css" />
 </html>
