--- a/grupo/views/content/back_link.html
+++ b/grupo/views/content/back_link.html
@@ -1,6 +1,6 @@
 {% block back_link %}
 <div class="d-flex align-items-left justify-content-left" style="margin-left: 20px; margin-top: -30px;">
-    <a class="back-link" href="">
+    <a class="back-link" href="..">
         <i class="fa fa-angle-left"></i>
         Voltar
     </a>
