Corrigindo link das rotas

--- a/grupo/views/iot/iot.html
+++ b/grupo/views/iot/iot.html
@@ -12,13 +12,13 @@
 <div class="d-flex align-items-center justify-content-center">
     <ul class="no-dots">
         <li class="mb-3">
-            <a class="btn btn-outline-success" href="IoT/register_boards">
+            <a class="btn btn-outline-success" href="/IoT/register_boards">
                 <i class="fas fa-plus"></i>
                 Registrar Placas
             </a>
         </li>
         <li class="">
-            <a class="btn btn-outline-secondary" href="IoT/list_of_boards">
+            <a class="btn btn-outline-secondary" href="/IoT/BoardsList">
                 <i class="fa fa-list"></i>
                 Visualizar Placas
             </a>
@@ -33,13 +33,13 @@
 <div class="d-flex align-items-center justify-content-center">
     <ul class="no-dots">
         <li class="mb-3 align-items-center justify-content-center">
-            <a class="btn btn-outline-success" href="IoT/register_sensors">
+            <a class="btn btn-outline-success" href="/IoT/register_sensors">
                 <i class="fas fa-plus"></i>
                 Registrar Sensores
             </a>
         </li>
         <li class="align-items-center justify-content-center">
-            <a class="btn btn-outline-secondary" href="IoT/list_of_sensors">
+            <a class="btn btn-outline-secondary" href="/IoT/SensorsList">
                 <i class="fa fa-list"></i>
                 Visualizar Sensores
             </a>
