--- a/grupo/views/iot/list/list_board.html
+++ b/grupo/views/iot/list/list_board.html
@@ -7,16 +7,16 @@
 </div>
 <div class="mb-3 d-flex align-items-center justify-content-center">
     <ul class="navbar-nav">
-    {% for board_sensor in iot_list_board %}
+    {% for boards in db_board %}
         <li class="mb-3 nav-item">    
             <div class="mb-3 d-flex align-items-center justify-content-center">
                 <ul class="list-group list-group-horizontal">
-                    {% if board_sensor['status'] == True %}
+                    {% if boards['status'] == True %}
                         <li class="list-group-item list-group-item-success">Ativada</li>
                     {% else %}
                         <li class="list-group-item list-group-item-danger">Desativada</li>
                     {% endif %}
-                    <li class="list-group-item">{{ board_sensor['name'] }}</li>
+                    <li class="list-group-item">{{ boards['name'] }}</li>
                     <li class="list-group-item">
                         <div class="btn-group btn-group-toggle" data-toggle="buttons">
                             <label class="btn btn-dark">
