--- a/grupo/views/iot/list/list_sensor.html
+++ b/grupo/views/iot/list/list_sensor.html
@@ -7,16 +7,17 @@
 </div>
 <div class="mb-3 d-flex align-items-center justify-content-center">
     <ul class="navbar-nav">
-    {% for board_sensor in iot_list_sensor %}
+    {% for boards in db_board %}
         <li class="mb-3 nav-item">    
             <div class="mb-3 d-flex align-items-center justify-content-center">
                 <ul class="list-group list-group-horizontal">
-                    {% if board_sensor['status'] == True %}
-                        <li class="list-group-item list-group-item-success">Ativada</li>
-                    {% else %}
-                        <li class="list-group-item list-group-item-danger">Desativada</li>
-                    {% endif %}
-                    <li class="list-group-item">{{ board_sensor['name'] }}</li>
+                    {% for sensor in boards['sensors'] %}
+                        {% if sensor['status'] == True %}
+                            <li class="list-group-item list-group-item-success">Ativada</li>
+                        {% else %}
+                            <li class="list-group-item list-group-item-danger">Desativada</li>
+                        {% endif %}
+                    <li class="list-group-item">{{ sensor['name'] }}</li>
                     <li class="list-group-item">
                         <div class="btn-group btn-group-toggle" data-toggle="buttons">
                             <label class="btn btn-dark">
@@ -27,6 +28,7 @@
                             </label>
                         </div>
                     </li>
+                    {% endfor %}
                 </ul>
             </div>
         </li>
