Editando dados do PBL2

--- a/PBL2/views/admin/billing/billing_index.html
+++ b/PBL2/views/admin/billing/billing_index.html
@@ -11,8 +11,11 @@
         </div>
         <div class="mb-3 d-flex align-items-center justify-content-center">
             <ul>
-                <li><a href="/admin/billing/register_billing">Cadastrar forma de pagamento</a></li>
-                <li><a href="/admin/billing/register_billing_forms">Registrar cobrança de uma comanda</a></li>
+                <li><a href="register_billing">Cadastrar Cobrança</a></li>
+                <li><a href="register_billing_form">Registrar Forma de Pagamento</a></li>
+                <li><a href="billing_billing_forms">Registrar Forma de Pagamento à uma Cobrança</a></li>
+                <li><a href="view_billings">Listar Cobranças</a></li>
+                <li><a href="view_billing_forms">Listar Formas de Pagamento</a></li>
             </ul>
         </div>
     </body>
