--- a/PBL2/views/admin/billing/register_billing.html
+++ b/PBL2/views/admin/billing/register_billing.html
@@ -1,49 +1,11 @@
-{% extends "admin/admin_base.html" %}
+{% import "/utils/forms.html" as forms %} {% extends "admin/admin_base.html" %}
 {% block main %}
-<main>
-    <body style="margin: 20px 20px 20px 20px">
-        <div class="d-flex align-items-center justify-content-center">
-            <h2>Cadastrar Cobrança</h2>
-        </div>
-        <div class="mb-5 d-flex align-items-center justify-content-center">
-            <form action="/billing/register_billing" method="POST" style="margin: 20px 20px 20px 20px;">
-                <div class="form-group mb-3">
-                    <label for="billing_date" class="col-sm-2 col-form-label">Descrição</label>
-                    <div class="col-sm-10">
-                        <input type="date" class="form-control" id="billing_date" name="billing_date" value="">
-                    </div>
-                </div>
-                <div class="form-group mb-3">
-                    <label for="value" class="col-sm-2 col-form-label">Valor</label>
-                    <div class="col-sm-10">
-                        <input type="number" step="0.01" class="form-control" id="value" placeholder="Ex.: 70.00">
-                    </div>
-                </div>                
-                <div class="form-group mb-3">
-                    <select class="form-select form-select-md mb-3" aria-label="">
-                        {% if billing_forms %}
-                            {% for form_option in billing_forms %}
-                                <option value="{{ billing_forms.index(form_option) + 1 }}">{{ form_option }}</option>
-                            {% endfor %}
-                        {% else %}
-                        <option selected>Nenhuma Forma de Pagamento cadastrada!</option>
-                        {% endif%}
-                    </select>
-                </div>
-                <br>
-                <div class="form-group mb-5 d-flex align-items-center justify-content-center">
-                    <input class="btn btn-success" type="submit" value="Registrar">
-                </div>
-                <div class="mb-5 d-flex align-items-center justify-content-center">
-                    <div class="mb-5 d-flex align-items-center justify-content-center">
-                        <h2>Cobrança</h2>
-                    </div>
-                    <div id="content">
-                        {% include "admin/billing/view_billings.html" %}
-                    </div>
-                </div>
-            </form>
-        </div>
-    </body>
+<main class="p-5">
+  <h2>Registro de Cobrança</h2>
+  <form method="POST">
+    {{ forms.input(label="Valor", name="value", id="value", type="text", box_size=3) }} 
+    {{ forms.input(label="Data de Cobrança", name="billing_date", id="billing_date", type="date", box_size=3) }} 
+    {{ forms.button(label="Cadastrar Cobrança", box_size=3) }} 
+  </form>
 </main>
-{% endblock main %}
+{% endblock main %} 
