--- a/PBL2/views/admin/billing/register_billing_forms.html
+++ b/PBL2/views/admin/billing/register_billing_forms.html
@@ -1,37 +1,11 @@
-{% extends "admin/admin_base.html" %}
+{% import "/utils/forms.html" as forms %} {% extends "admin/admin_base.html" %}
 {% block main %}
-<main>
-    <body style="margin: 20px 20px 20px 20px">
-        <div class="mb-5 d-flex align-items-center justify-content-center">
-            <h2>Cadastrar Forma de Pagamento</h2>
-        </div>
-        <div class="mb-5 d-flex align-items-center justify-content-center">
-            <form action="/admin/billing/register_billing_form" method="POST">            
-                <div class="form-group mb-3">
-                    <label for="name" class="col-sm-2 col-form-label">Nome</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="name" name="name" value="">
-                    </div>
-                </div>
-                <div class="form-group mb-3">
-                    <label for="description" class="col-sm-2 col-form-label">Descrição</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="description" name="description" value="">
-                    </div>
-                </div>
-                <div class="form-group mb-5 d-flex align-items-center justify-content-center">
-                    <input class="btn btn-success" type="submit" value="Registrar">
-                </div>
-            </form>
-        </div>
-        <div class="mb-5 d-flex align-items-center justify-content-center">
-            <div class="mb-5 d-flex align-items-center justify-content-center">
-                <h2>Formas de Pagamento</h2>
-            </div>
-            <div id="content">
-                {% include "admin/billing/view_billing_forms.html" %}
-            </div>
-        </div>
-    </body>
+<main class="p-5">
+  <h2>Registro de Formas de Pagamento</h2>
+  <form method="POST">
+    {{ forms.input(label="Nome", name="name", id="name", type="text", box_size=3) }} 
+    {{forms.textarea(label="Descrição", name="description", id="description", box_size=3) }}
+    {{forms.button(label="Cadastrar Forma de Pagamento", box_size=3) }} 
+  </form>
 </main>
 {% endblock main %}
