--- a/PjBL4/views/admin/admin_base.html
+++ b/PjBL4/views/admin/admin_base.html
@@ -41,78 +41,49 @@
                     <div class="sb-sidenav-menu">
                         <div class="nav">
                             <div class="sb-sidenav-menu-heading">MENU</div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
-                                <div class="sb-nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
-                                    <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
-                                  </svg></div>
-                                Cômodos
-                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                            </a>
-                            <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
-                                <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="#">
-                                        <div class="sb-nav-link-icon">
-                                            <i class="fas fa-angle-down"></i>
-                                        </div>
-                                        Listar Cômodos</a>
-                                    <a class="nav-link" href="#">
-                                        <div class="sb-nav-link-icon">
-                                            <i class="fas fa-angle-down"></i>
-                                        </div>
-                                        Ver sensores em um Cõmodo</a>
-                                </nav>
-                            </div>
-                             <!-- if admin   -->
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseTicket" aria-expanded="false" aria-controls="collapseLayouts">
-                                <div class="sb-nav-link-icon"><i class="fas fa-list"></i></div>
-                                Adicionar Usuário
+                                <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
+                                Usuários
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapseTicket" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="/admin/user/view_user">
                                         <div class="sb-nav-link-icon">
-                                            <i class="fas fa-angle-down"></i>
+                                            <i class="fas fa-list-ul"></i>
                                         </div>
-                                        Comandas</a>
-                                    <a class="nav-link" href="#">
+                                        Lista de Usuários</a>
+                                    <a class="nav-link" href="/admin/user/register_user">
                                         <div class="sb-nav-link-icon">
-                                            <i class="fas fa-angle-down"></i>
+                                            <i class="fas fa-user-plus"></i>
                                         </div>
-                                        Pedidos</a>
+                                        Adicionar usuário</a>
                                 </nav>
                             </div>
-                            <!-- end if -->
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseBilling" aria-expanded="false" aria-controls="collapseLayouts">
-                                <div class="sb-nav-link-icon"><i class="fas fa-credit-card-alt"></i></div>
-                                Cobrança
+                                <div class="sb-nav-link-icon"><i class="fa-solid fa-lightbulb"></i></div>
+                                IOT
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapseBilling" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="/admin/billing/">
+                                    <a class="nav-link" href="/admin/iot/">
                                         <div class="sb-nav-link-icon">
-                                            <i class="fas fa-angle-down"></i>
+                                            <i class="fas fa-chart-area"></i>
                                         </div>
-                                        Dashboad</a>
-                                    <a class="nav-link" href="/admin/billing/register_billing">
+                                        Dashboard</a>
+                                    <a class="nav-link" href="/admin/iot/register_sensor">
                                         <div class="sb-nav-link-icon">
-                                            <i class="fas fa-angle-down"></i>
+                                            <i class="fas fa-broadcast-tower"></i>
                                         </div>
-                                        Cobrança</a>
-                                    <a class="nav-link" href="/admin/billing/register_billing_forms">
+                                        Adicionar Sensor</a>
+                                    <a class="nav-link" href="/admin/iot/register_actuator">
                                         <div class="sb-nav-link-icon">
-                                            <i class="fas fa-angle-down"></i>
+                                            <i class="fas fa-microchip"></i>
                                         </div>
-                                        Formas de Cobrança</a>
-                                    
+                                        Adicionar Atuador</a>
                                 </nav>
-                            </div>
-                            <a class="nav-link" href="/admin/iot/">
-                                <div class="sb-nav-link-icon"><i class="fa-solid fa-lightbulb"></i></div>
-                                IOT
-                            </a>
-                            
+                            </div>                            
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
