--- a/PjBL4/views/admin/user/view_user.html
+++ b/PjBL4/views/admin/user/view_user.html
@@ -1,4 +1,4 @@
-{% extends "billing/billing_index.html" %}
+{% extends "admin/admin_base.html" %}
 {% block main %}
 <main>
     <div class="vertical-center">
@@ -6,29 +6,49 @@
             <div class="justify-content-center">
                 <div class="container-fluid px-4">
                     <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item active"><a href="/admin/">Dashboard</a></li>
-                        <li class="breadcrumb-item active"><a href="/admin/billing/">cobrança</a></li>
-                        <li class="breadcrumb-item active">Lista de Cobranças</li>
+                        <li class="breadcrumb-item active"><a href="/admin/">Home</a></li>
+                        <li class="breadcrumb-item active">Usuários</li>
+                        <li class="breadcrumb-item active">Lista de Usuários</li>
                     </ol>
-                    <div class="card">
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <i class="fas fa-table me-1"></i>
+                            Usuários cadastrados
+                        </div>
                         <div class="card-body">
-                            <table id="view_billings" class="table table-striped table-bordered" style="width:100%">
+                            <table id="datatablesSimple">
                                 <thead>
                                     <tr>
-                                        <th>Id</th>
-                                        <th>Valor</th>
-                                        <th>Data</th>
+                                        <th>Username</th>
+                                        <th>E-mail</th>
+                                        <th>Cargo</th>
+                                        <th>Criado</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for billing in billings %}
-                                        <tr>
-                                            <td>{{ billing.id }}</td>
-                                            <td>{{ billing.value }}</td>
-                                            <td>{{ billing.billing_date }}</td>
-                                        </tr>
-                                    {% endfor %}
+                                    {% for user in users %}
+                                    <tr>
+                                        <td>{{ user.username }}</td>
+                                        <td>{{ user.email }}</td>
+                                        {% if user.is_admin == true %}
+                                        <td>Admin</td>
+                                        {% else %}
+                                        <td>Normal</td>
+                                        {% endif %}
+                                        <td>{{ user.created_at }}</td>
+                                        <td><a href="/admin/user/update_user/{{ user.id }}">Editar</a></td>
+                                        <td><a href="/admin/user/delete_user/{{ user.id }}">Deletar</a></td>
+                                    </tr>
+                                    {% endfor %}   
                                 </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <th>Username</th>
+                                        <th>E-mail</th>
+                                        <th>Cargo</th>
+                                        <th>Criado</th>
+                                    </tr>
+                                </tfoot>
                             </table>
                         </div>
                     </div>
@@ -38,3 +58,4 @@
     </div>
 </main>
 {% endblock %}
+
