Editando view da user_index.html

--- a/PjBL4/views/admin/user/user_index.html
+++ b/PjBL4/views/admin/user/user_index.html
@@ -2,17 +2,17 @@
 {% block main %}
 <main>
     <div class="container-fluid px-4">
-        <h1 class="mt-4">Admin Cobrança</h1>
+        <h1 class="mt-4">Admin - Usuários</h1>
         <ol class="breadcrumb mb-4">
-            <li class="breadcrumb-item active"><a href="/admin/">Dashboard</a></li>
-            <li class="breadcrumb-item active">Cobrança Dashboad</li>
+            <li class="breadcrumb-item active"><a href="/admin/">Home</a></li>
+            <li class="breadcrumb-item active">Menu - Usuário</li>
         </ol>
         <div class="row">
             <div class="col-xl-4 col-md-6">
                 <div class="card bg-info text-white mb-4">
-                    <div class="card-body">Cadastrar Cobrança</div>
+                    <div class="card-body">Cadastrar Usuário</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-white stretched-link" href="/admin/billing/register_billing">Acessar página de Cadastro</a>
+                        <a class="small text-white stretched-link" href="/admin/user/register_user">Acessar página de Cadastro</a>
                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
@@ -20,27 +20,9 @@
             
             <div class="col-xl-4 col-md-6">
                 <div class="card bg-primary text-white mb-4">
-                    <div class="card-body">Listar Cobranças</div>
+                    <div class="card-body">Listar Usuários</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-white stretched-link" href="/admin/billing/view_bilings">Acessar página de Listagem</a>
-                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-md-6">
-                <div class="card bg-info text-white mb-4">
-                    <div class="card-body">Cadastrar Formas de Cobranças</div>
-                    <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-white stretched-link" href="/admin/billing/register_billing_forms">Acessar página de Cadastro</a>
-                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-md-6">
-                <div class="card bg-primary text-white mb-4">
-                    <div class="card-body">Listar Formas de Cobranças</div>
-                    <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-white stretched-link" href="/admin/billing/view_billing_forms">Acessar página de Listagem</a>
+                        <a class="small text-white stretched-link" href="/admin/user/view_user">Acessar página de Listagem</a>
                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
