Alterando tamanho dos botões

--- a/PjBL4/views/admin/iot/iot_index.html
+++ b/PjBL4/views/admin/iot/iot_index.html
@@ -31,7 +31,7 @@
         
 
         <div class="row">
-            <div class="col-xl-4 col-md-6">
+            <div class="col-xl-12 col-md-6">
                 <div class="card bg-dark text-white mb-4">
                     <div class="card-body">Acionar um atuador</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4 col-md-6">
+            <div class="col-xl-6 col-md-6">
                 <div class="card bg-info text-white mb-4">
                     <div class="card-body">Cadastrar Novo Sensor</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4 col-md-6">
+            <div class="col-xl-6 col-md-6">
                 <div class="card bg-info text-white mb-4">
                     <div class="card-body">Cadastrar Novo Atuador</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4 col-md-6">
+            <div class="col-xl-6 col-md-6">
                 <div class="card bg-secondary text-white mb-4">
                     <div class="card-body">Listar Atuadores Cadastrados</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -67,16 +67,16 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4 col-md-6">
+            <div class="col-xl-6 col-md-6">
                 <div class="card bg-secondary text-white mb-4">
-                    <div class="card-body">Listar Sensores Cadastrados</div>
+                    <div class="card-body">Listar Sensores e Atuadores por Cômodo</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
                         <a class="small text-white stretched-link" href="/admin/iot/view_sensors">Acessar página de Sensores</a>
                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4 col-md-6">
+            <!-- <div class="col-xl-4 col-md-6">
                 <div class="card bg-secondary text-white mb-4">
                     <div class="card-body">Listar Sensores e Atuadores por Cômodo</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -84,7 +84,7 @@
                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         {% block content %} {% endblock content%}
 </main>
