Adicionando parte do TDE 2

--- a/PjBL4/views/admin/admin_index.html
+++ b/PjBL4/views/admin/admin_index.html
@@ -170,9 +170,40 @@
                                         <h4>Framework para design de aplicações web</h4> 
                                     </p>
                                     <p>
-                                        <h5><strong>1. </strong></h5>
+                                        <h5><strong>1. Falar sobre as principais características dos frameworks de design front-end de aplicações web, como modelos, bibliotecas, classes e métodos.</strong></h5>
                                     </p>
                                     <p>
+                                        Frameworks de design front-end para aplicações web são conjuntos de ferramentas, bibliotecas e modelos que ajudam os desenvolvedores a criar interfaces para o usuário mais facilmente e rapidamente. Alguns dos frameworks mais populares são o Bootstrap, Foundation e Materialize.
+                                    </p>
+                                    <p>
+                                        Esses frameworks fornecem modelos predefinidos para a criação de páginas web responsivas e podem incluir bibliotecas de JavaScript para adicionar interatividade. Eles também podem incluir, como no Bootstrap, classes de CSS que definem estilos predefinidos para botões, formulários e outros elementos de interface de usuário, o que encurta a curva de aprendizagem da estilização de páginas web, uma vez que esses frameworks geralmente possuem muitos exemplos disponíveis na internet e que são facilmente adaptáveis a qualquer outro contexto.
+                                    </p>
+                                    <p>
+                                        As ferramentas usadas para desenvolver com frameworks de design front-end de aplicações web incluem HTML, CSS e JavaScript. O HTML é usado para definir a estrutura da página, enquanto o CSS é usado para definir o estilo e o layout da página e o JavaScript é usado para adicionar interatividade e dinamismo à página, além de comunicação com o back-end da aplicação e a manipulação de alguns dados e formulários.
+                                    </p>
+                                    <p>
+                                        Ao usar um framework de design front-end de aplicações web, é importante entender como as ferramentas do framework funcionam e como elas podem ser personalizadas para atender às necessidades da aplicação, a fim de escolher o framework com o maior número de possibilidades que atendam as necessidades do seu projeto.
+                                    </p>
+                                    <p>
+                                        Os frameworks de design front-end de aplicações web são compostos por diversas ferramentas e recursos que facilitam o processo de desenvolvimento de interfaces de usuário. Entre as principais características desses frameworks estão:
+                                    </p>
+                                    <p>
+                                        - Modelos pré-definidos: Os frameworks de design front-end geralmente fornecem uma variedade de modelos predefinidos. Esses modelos são estruturas de código HTML, CSS e, às vezes, JavaScript que representam componentes de interface de usuário comuns, como barras de navegação, botões, formulários, tabelas e muito mais. Os modelos predefinidos oferecem um ponto de partida rápido e consistente para o desenvolvimento, permitindo que os desenvolvedores economizem tempo e esforço ao criar interfaces de usuário. Além disso, os modelos são projetados para serem modulares e reutilizáveis, facilitando a construção de interfaces consistentes e padronizadas em todo o site ou aplicativo. Alguns modelos são comumente conhecidos pelo nome de templates.
+                                    </p>
+                                    <p>
+                                        - Bibliotecas de JavaScript: Os frameworks de design front-end muitas vezes incluem bibliotecas de JavaScript para adicionar interatividade e comportamento dinâmico às páginas web. Essas bibliotecas fornecem um conjunto de funções e métodos pré-construídos que facilitam tarefas comuns, como manipulação do DOM (Document Object Model), manipulação de eventos, animações, requisições assíncronas (AJAX), entre outros.
+                                    </p>
+                                    <p>
+                                        - Classes de CSS: As classes de CSS são outra característica comum dos frameworks de design front-end. Elas são usadas para aplicar estilos aos elementos HTML e definir o layout da página. Os frameworks fornecem um conjunto de classes de CSS pré-definidas que seguem uma convenção de nomenclatura consistente e significativa. Essas classes são projetadas para facilitar a estilização de elementos comuns, como botões, tipografia, espaçamento, cores, grades (grid systems) e muito mais. Ao aplicar essas classes aos elementos HTML, os desenvolvedores podem rapidamente obter um estilo consistente e profissional em todo o site ou aplicativo.
+                                    </p>
+                                    <p>
+                                        - Métodos e funções:Os frameworks de design front-end também oferecem métodos e funções que simplificam tarefas comuns no desenvolvimento web. Essas funcionalidades são geralmente fornecidas por meio de bibliotecas de JavaScript ou recursos internos do framework. Os métodos e funções podem abranger desde recursos simples, como manipulação de eventos e validação de formulários, até recursos mais avançados, como navegação entre páginas, criação de componentes dinâmicos e gerenciamento de estado. O uso dessas funcionalidades facilita o desenvolvimento e melhora a eficiência dos desenvolvedores, reduzindo a quantidade de código necessário para realizar determinadas tarefas.
+                                    </p>
+                                    <p>
+
+                                    </p>
+                                    <p>
+                                        
                                     </p>
                                 </div>
                             </div>
